# logcatviewer

./: .gitignore  CMakeLists.txt  README.md  logcatviewer.pro
src/: adbhelper.cpp  adbhelper.h  config.h  logcatviewer.cpp  logcatviewerwindow.cpp  logcatviewerwindow.h  logcatviewerwindow.ui  logitem.h  main.cpp  mainwindow.cpp  mainwindow.h
